	dialog-that-resizes when you first pop up the file chooser.
	(emit_default_size_changed): Just emit the signal; don't check for
	the widget's state so we can be emitted during the initial
	::realize() when we are not mapped yet.
	(update_preview_widget_visibility): Only emit default_size_changed
	if the widget is not mapped, to avoid resizing the dialog while it
	is visible.

2009-01-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 450716 – New API to change global IM

	Requested by Daniel Elstner.

	* gtk/gtk.symbols:
	* gtk/gtkimmulticontext.[hc] (gtk_im_multicontext_set_context_id):
	New function to set the context id on a GtkIMMulticontext.

	* gtk/gtkentry.c:
	* gtk/gtktextview.c: Add a ::im-module property that can be
	set to override the global setting for the im module to be used.

2009-01-13  Christian Dywan  <christian@imendio.com>

	Bug 566532 – GtkScaleButton implementation of GtkOrientable

	* gtk/gtk.symbols:
	* gtk/gtkscalebutton.c (gtk_scale_button_class_init),
	(gtk_scale_button_set_property):
	* gtk/gtkscalebutton.h: Deprecate gtk_scale_button_get_orientation
        in favour of implementing GtkOrientable. Patch by Bruce Cowan.

2009-01-13  Tor Lillqvist  <tml@iki.fi>

	Bug 164002 - query scripts don't work uninstalled on windows

	* gtk/gtkmain.c (_gtk_get_libdir): If the gtk DLL is in a ".libs"
	folder, assume we are running uninstalled, and use the
	configure-time GTK_LIBDIR.

2009-01-12  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Refer to tray icon spec, instead of a random email.

2009-01-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c (gtk_window_set_icon_name): Don't cause lots
	of X traffic when the icon name doesn't actually change. Some
	apps like to reset their window icon frequently, without actually
	changing the icon name...

2009-01-12  Paolo Borelli  <pborelli@katamail.com>

	Bug 492794 – Pasting external text at end of view yields wrong
	scrolling to mark

	* gtk/gtktextbuffer.[ch]:
	* gtk/gtktextview.c: